# cmake_server

./: .gitignore  bootstrap.bat
source/: .clang-format  CMakeLists.txt  cmake_server.sln  dirs.proj
source/cmake_server/: cmake_server.vcxproj  cmake_server.vcxproj.filters
source/driver/: driver.vcxproj  driver.vcxproj.filters
source/include/: cmake_server.h
source/src/: driver.cpp
source/src/cmake_server/: cmake_server.cpp
